VQ-3598:Ability to View Search Popup Screen with Various KYC Details

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -845,7 +845,24 @@
       "rate_table": "费率表",
       "absolute_range": "绝对范围",
       "step_ranges": "阶梯范围",
-      "effective_date": "生效日期"
+      "effective_date": "生效日期",
+      "pin": "密码",
+      "internal_id": "内部编号",
+      "this_property_id_is_duplicated": "此属性编号重复",
+      "effective_date_is_required": "生效日期为必填项",
+      "no_client_found": "未找到客户",
+      "select_a_cover": "选择保险覆盖范围",
+      "clauses": "条款",
+      "mandatory": "强制性",
+      "limits_of_liability": "责任限额",
+      "narration": "说明",
+      "excesses_applicable": "适用的免赔额",
+      "add_benefits": "添加福利",
+      "contact_information": "联系信息",
+      "no_contact_information_available": "没有可用的联系信息",
+      "total_sum_insured": "总保额",
+      "total_taxes": "总税额",
+      "excesses": "免赔额"
     },
     "policy": {
       "underwriting_new_transaction": "核保：新交易",
