--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -872,7 +872,24 @@
       "rate_table": "Tariftabelle",
       "absolute_range": "Absoluter Bereich",
       "step_ranges": "Stufenbereiche",
-      "effective_date": "Fecha de vigencia"
+      "effective_date": "Fecha de vigencia",
+      "pin": "Pin",
+      "internal_id": "ID interna",
+      "this_property_id_is_duplicated": "Esta ID de propiedad está duplicada",
+      "effective_date_is_required": "Se requiere fecha de vigencia",
+      "no_client_found": "No se encontró cliente",
+      "select_a_cover": "Seleccione una cobertura",
+      "clauses": "Cláusulas",
+      "mandatory": "Obligatorio",
+      "limits_of_liability": "Límites de responsabilidad",
+      "narration": "Narración",
+      "excesses_applicable": "Excesos aplicables",
+      "add_benefits": "Agregar beneficios",
+      "contact_information": "Información de contacto",
+      "no_contact_information_available": "No hay información de contacto disponible",
+      "total_sum_insured": "Suma total asegurada",
+      "total_taxes": "Total de impuestos",
+      "excesses": "Excesos"
     },
     "policy": {
       "underwriting_new_transaction": "Suscripción: Nueva transacción",
