--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -871,7 +871,24 @@
       "rate_table": "Tableau des Tarifs",
       "absolute_range": "Plage Absolue",
       "step_ranges": "Plages d'Étapes",
-      "effective_date": "Date d'entrée en vigueur"
+      "effective_date": "Date d'entrée en vigueur",
+      "pin": "Code PIN",
+      "internal_id": "ID interne",
+      "this_property_id_is_duplicated": "Cet identifiant de propriété est dupliqué",
+      "effective_date_is_required": "La date d'effet est requise",
+      "no_client_found": "Aucun client trouvé",
+      "select_a_cover": "Sélectionnez une couverture",
+      "clauses": "Clauses",
+      "mandatory": "Obligatoire",
+      "limits_of_liability": "Limites de responsabilité",
+      "narration": "Récit",
+      "excesses_applicable": "Franchises applicables",
+      "add_benefits": "Ajouter des avantages",
+      "contact_information": "Informations de contact",
+      "no_contact_information_available": "Aucune information de contact disponible",
+      "total_sum_insured": "Montant total assuré",
+      "total_taxes": "Total des taxes",
+      "excesses": "Franchises"
     },
     "policy": {
       "underwriting_new_transaction": "Souscription : Nouvelle transaction",
