--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -848,7 +848,24 @@
       "rate_table": "Jedwali la Viwango",
       "absolute_range": "Kiwango Kamili",
       "step_ranges": "Viwanja vya Hatua",
-      "effective_date": "Tarehe ya kuanza kutumika"
+      "effective_date": "Tarehe ya kuanza kutumika",
+      "pin": "Pin",
+      "internal_id": "ID ya Ndani",
+      "this_property_id_is_duplicated": "Kitambulisho hiki cha mali kinarudiwa",
+      "effective_date_is_required": "Tarehe ya kuanza ni lazima",
+      "no_client_found": "Hakuna mteja aliyepatikana",
+      "select_a_cover": "Chagua bima",
+      "clauses": "Vifungu",
+      "mandatory": "Lazima",
+      "limits_of_liability": "Mipaka ya dhima",
+      "narration": "Maelezo",
+      "excesses_applicable": "Ziada zinazotumika",
+      "add_benefits": "Ongeza manufaa",
+      "contact_information": "Maelezo ya mawasiliano",
+      "no_contact_information_available": "Hakuna maelezo ya mawasiliano yanayopatikana",
+      "total_sum_insured": "Jumla ya kiasi kilichokatiwa bima",
+      "total_taxes": "Jumla ya kodi",
+      "excesses": "Ziada"
     },
     "policy": {
       "underwriting_new_transaction": "Uwekaji wa Saini: Biashara Mpya",
