--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -785,6 +785,7 @@
       "source_is_required": "Source is required",
       "product_is_required": "Product is required",
       "invalid_phone_format": "Please provide a valid phone number.",
+      "invalid_email_format": "Please provide a valid Email Address.",
       "branch_is_required": "Branch is required",
       "binder_is_required": "Binder is required",
       "cover_from_is_required": " Cover From date is required",
@@ -1724,7 +1725,7 @@
           "continue": "Continue",
           "occupation_is_required": "Occupation is required",
           "invalid_email_format": "Invalid email format"
-         
+
         },
         "quick_quote": {
           "product_details": "Product details",
