VQ-719: Capture Medical History

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1389,6 +1389,7 @@
       "quotations": {
         "account_number": "账号",
         "add_coinsurance_option": "添加共保选项",
+        "address": "地址",
         "agent": "代理人",
         "alcohol": "酒精",
         "annual_premium": "年度保费",
@@ -1421,10 +1422,16 @@
         "cover_types": "保险类型",
         "currency": "货币",
         "date_of_birth_age": "出生日期（年龄）",
+        "defects": "您是否有先天缺陷/异常/身体畸形/残疾？",
         "delete": "删除",
+        "delivery_date": "预产期",
         "dependent": "受抚养人",
         "dependents_details": "受抚养人详情",
         "description": "描述",
+        "diagnosed_dependents": "您或您的任何受养人是否曾经患过、正在患或被诊断为以下疾病？是/否问题。如果是，请提供日期、持续时间、描述和所给的治疗",
+        "diagnosis": "诊断",
+        "diagnosis_date": "诊断日期",
+        "disease": "疾病",
         "distribution_channel": "分销渠道",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "您希望享有递增选项的好处吗",
         "dob": "出生日期",
@@ -1447,6 +1454,7 @@
         "gender": "性别",
         "guardian_details": "监护人详情",
         "height": "身高（厘米）",
+        "hereditary_diseases": "您的家人（父母、兄弟姐妹、子女）是否在55岁之前患过、患有或因心脏病、糖尿病、癌症或其他遗传性疾病去世",
         "iban": "国际银行账号",
         "incorrect_id_no_format": "身份证号码格式错误",
         "insurance_company": "保险公司",
@@ -1458,10 +1466,13 @@
         "loading": "加载中",
         "male": "男性",
         "marital_status": "婚姻状况",
+        "medical_history": "病史",
+        "medication": "您目前正在服用任何药物吗？",
         "mode_of_identity": "身份证明类型",
         "mode_of_identity_number": "身份证明号码",
         "mode_of_identity_required": "身份证明类型是必填项",
         "mpay_no": "移动支付号码",
+        "name": "姓名",
         "name_trustee": "姓名（受托人）",
         "nationality": "国籍",
         "nationality_required": "国籍是必填项",
@@ -1475,6 +1486,8 @@
         "option": "选项",
         "other_name": "其他名字",
         "percentage_benefit": "收益百分比",
+        "person": "个人",
+        "personal_doctor": "您是否有私人医生",
         "period_consumed": "消费时期",
         "phone_number": "电话号码",
         "physical_address": "实际地址",
@@ -1485,6 +1498,7 @@
         "po_box_number": "邮政信箱号码",
         "postal_address_details": "邮寄地址详情",
         "preferred_channel": "首选渠道",
+        "pregnancy_status": "怀孕？请提供您的状态",
         "premium": "保费",
         "premium_frequency": "保费频率",
         "product": "产品",
