--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1484,6 +1484,7 @@
       "quotations": {
         "account_number": "Account No.",
         "add_coinsurance_option": "Add Coinsurance Option",
+        "address": "Address",
         "alcohol": "Alcohol",
         "annual_premium": "Annual Premium",
         "back": "Back",
@@ -1516,10 +1517,16 @@
         "cover_types": "Cover Types",
         "currency": "Currency",
         "date_of_birth_age": "Date Of Birth (Age)",
+        "defects": "Do you have any congenital defect/ abnormality/ Physical deformity/ Handicap",
         "delete": "Delete",
+        "delivery_date": "Expected delivery date",
         "dependent": "Dependent(s)",
         "dependents_details": "Dependents Details",
         "description": "Description",
+        "diagnosed_dependents": "Have you or any of you dependents ever suffered or do you suffer from or diagnosed with any of the following? Yes/No Questions. If Yes, please provide dates, duration, description and treatment given",
+        "diagnosis": "Diagnosis",
+        "diagnosis_date": "Diagnosis Date",
+        "disease": "Disease",
         "distribution_channel": "Distribution Channel",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Do you wish to have the benefit of escalation option",
         "dob": "Date of Birth",
@@ -1542,6 +1549,7 @@
         "gender": "Gender",
         "guardian_details": "Guardian Details",
         "height": "Height (cm)",
+        "hereditary_diseases": "Are any of your family members (Parents, Siblings, Children) suffering from or have suffered from or have died of heart disease, diabetes or high sugar levels in blood, cancer or any other hereditary or family specific disorder before attaining 55 years of age",
         "iban": "IBAN",
         "incorrect_id_no_format": "Incorrect ID No Format",
         "insurance_company": "Insurance Company",
@@ -1553,10 +1561,13 @@
         "loading": "Loading",
         "male": "Male",
         "marital_status": "Marital Status",
+        "medical_history": "Medical History",
+        "medication" : "Are you currently taking any medication",
         "mode_of_identity": "Mode of Identity",
         "mode_of_identity_number": "Mode of Identity Number",
         "mode_of_identity_required": "Mode of Identity is required",
         "mpay_no": "MPay No",
+        "name": "Name",
         "name_trustee": "Name (Trustee)",
         "nationality": "Nationality",
         "nationality_required": "Nationality is required",
@@ -1571,6 +1582,8 @@
         "other_name": "Other Name",
         "period_consumed": "Period Consumed",
         "percentage_benefit": "Percentage Benefit",
+        "person": "Person",
+        "personal_doctor": "Do you have a personal doctor",
         "phone_number": "Phone Number",
         "physical_address": "Physical Address",
         "pin_number": "PIN Number",
@@ -1580,6 +1593,7 @@
         "policy_question": "Do you have any active, lapsed, paid up or surrendered life assurance policy from any life assurance company",
         "postal_address_details": "Postal Address Details",
         "preferred_channel": "Preferred Channel",
+        "pregnancy_status": "Pregnant? Please provide your status",
         "premium": "Premium",
         "premium_frequency": "Premium Frequency",
         "product": "Product",
