--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1413,6 +1413,7 @@
       "quotations": {
         "account_number": "Número de cuenta",
         "add_coinsurance_option": "Agregar opción de coaseguro",
+        "address": "Dirección",
         "agent": "Agente",
         "alcohol": "Alcohol",
         "annual_premium": "Prima anual",
@@ -1445,10 +1446,16 @@
         "cover_types": "Tipos de cobertura",
         "currency": "Moneda",
         "date_of_birth_age": "Fecha de Nacimiento (Edad)",
+        "defects": "¿Tiene algún defecto congénito, anomalía, deformidad física o discapacidad?",
         "delete": "Eliminar",
+        "delivery_date": "Fecha prevista de parto",
         "dependent": "Dependiente",
         "dependents_details": "Detalles de los dependientes",
         "description": "Descripción",
+        "diagnosed_dependents": "¿Usted o alguno de sus dependientes ha sufrido, sufre o ha sido diagnosticado con alguna de las siguientes enfermedades? Preguntas de Sí/No. Si la respuesta es Sí, proporcione fechas, duración, descripción y tratamiento recibido",
+        "diagnosis": "Diagnóstico",
+        "diagnosis_date": "Fecha de diagnóstico",
+        "disease": "Enfermedad",
         "distribution_channel": "Canal de distribución",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "¿Desea tener el beneficio de la opción de escalación?",
         "dob": "Fecha de nacimiento",
@@ -1471,6 +1478,7 @@
         "gender": "Género",
         "guardian_details": "Detalles del tutor",
         "height": "Altura (cm)",
+        "hereditary_diseases": "¿Algún miembro de su familia (padres, hermanos, hijos) ha sufrido o sufre enfermedades del corazón, diabetes, cáncer u otros trastornos hereditarios antes de cumplir los 55 años",
         "iban": "IBAN",
         "incorrect_id_no_format": "Formato incorrecto del número de identificación",
         "insurance_company": "Compañía de seguros",
@@ -1482,10 +1490,13 @@
         "loading": "Cargando",
         "male": "Masculino",
         "marital_status": "Estado civil",
+        "medical_history": "Historial médico",
+        "medication": "¿Está tomando actualmente algún medicamento?",
         "mode_of_identity": "Tipo de identificación",
         "mode_of_identity_number": "Número de identificación",
         "mode_of_identity_required": "El tipo de identificación es obligatorio",
         "mpay_no": "Número MPay",
+        "name": "Nombre",
         "name_trustee": "Nombre (Fideicomisario)",
         "nationality": "Nacionalidad",
         "nationality_required": "La nacionalidad es obligatoria",
@@ -1499,6 +1510,8 @@
         "option": "Opción",
         "other_name": "Otro Nombre",
         "percentage_benefit": "Porcentaje de Beneficio",
+        "person": "Persona",
+        "personal_doctor": "¿Tiene un médico personal?",
         "period_consumed": "Período consumido",
         "phone_number": "Número de teléfono",
         "physical_address": "Dirección física",
@@ -1509,6 +1522,7 @@
         "policy_question": "¿Tiene alguna póliza de seguro de vida activa, vencida, pagada o rescatada de alguna compañía de seguros de vida",
         "postal_address_details": "Detalles de la dirección postal",
         "preferred_channel": "Canal preferido",
+        "pregnancy_status": "¿Embarazada? Por favor proporcione su estado",
         "premium": "Prima",
         "premium_frequency": "Frecuencia de prima",
         "product": "Producto",
