--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1416,6 +1416,7 @@
       "quotations": {
         "account_number": "Numéro de compte",
         "add_coinsurance_option": "Ajouter une option de coassurance",
+        "address": "Adresse",
         "agent": "Agent",
         "alcohol": "Alcool",
         "annual_premium": "Prime annuelle",
@@ -1449,10 +1450,16 @@
         "currency": "Devise",
         "distribution_channel": "Canal de distribution",
         "date_of_birth_age": "Date de naissance (Âge)",
+        "defects": "Avez-vous une malformation congénitale, une anomalie, une difformité physique ou un handicap?",
         "delete": "Supprimer",
+        "delivery_date": "Date prévue d'accouchement",
         "dependent": "Personne(s) à charge",
         "dependents_details": "Détails des personnes à charge",
         "description": "Description",
+        "diagnosed_dependents": "Vous ou l'un de vos dépendants avez-vous déjà souffert ou souffrez-vous ou avez-vous été diagnostiqué avec l'une des maladies suivantes? Questions Oui/Non. Si Oui, veuillez fournir les dates, la durée, la description et le traitement reçu",
+        "diagnosis": "Diagnostic",
+        "diagnosis_date": "Date du diagnostic",
+        "disease": "Maladie",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Souhaitez-vous bénéficier de l'option d'escalade",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
@@ -1474,6 +1481,7 @@
         "gender": "Genre",
         "guardian_details": "Détails du tuteur",
         "height": "Taille (cm)",
+        "hereditary_diseases": "Un de vos proches (parents, frères et sœurs, enfants) souffre-t-il ou a-t-il souffert ou est-il décédé de maladie cardiaque, de diabète, de cancer ou de tout autre trouble héréditaire avant l'âge de 55 ans",
         "iban": "IBAN",
         "incorrect_id_no_format": "Format du numéro d'identification incorrect",
         "insurance_company": "Compagnie d'assurance",
@@ -1485,10 +1493,13 @@
         "loading": "Chargement",
         "male": "Homme",
         "marital_status": "État civil",
+        "medical_history": "Antécédents Médicaux",
+        "medication": "Prenez-vous actuellement des médicaments?",
         "mode_of_identity": "Type d'identité",
         "mode_of_identity_number": "Numéro d'identité",
         "mode_of_identity_required": "Le type d'identité est requis",
         "mpay_no": "Numéro MPay",
+        "name": "Nom",
         "name_trustee": "Nom (Fiduciaire)",
         "nationality": "Nationalité",
         "nationality_required": "La nationalité est requise",
@@ -1502,6 +1513,8 @@
         "other_name": "Autre Nom",
         "option": "Option",
         "percentage_benefit": "Pourcentage de bénéfice",
+        "person": "Personne",
+        "personal_doctor": "Avez-vous un médecin personnel?",
         "period_consumed": "Période de consommation",
         "phone_number": "Numéro de téléphone",
         "physical_address": "Adresse physique",
@@ -1512,6 +1525,7 @@
         "policy_question": "Avez-vous une police d'assurance vie active, expirée, payée ou rachetée auprès de toute compagnie d'assurance vie",
         "postal_address_details": "Détails de l'adresse postale",
         "preferred_channel": "Canal préféré",
+        "pregnancy_status": "Enceinte? Veuillez indiquer votre statut",
         "premium": "Prime",
         "premium_frequency": "Fréquence des primes",
         "product": "Produit",
