--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1392,6 +1392,7 @@
       "quotations": {
         "account_number": "Nambari ya Akaunti",
         "add_coinsurance_option": "Ongeza Chaguo la Bima ya Pamoja",
+        "address": "Anwani",
         "agent": "Wakala",
         "alcohol": "Pombe",
         "annual_premium": "Ada ya Bima ya Mwaka",
@@ -1424,10 +1425,16 @@
         "cover_types": "Aina za Bima",
         "currency": "Sarafu",
         "date_of_birth_age": "Tarehe ya Kuzaliwa (Umri)",
+        "defects": "Je, una kasoro yoyote ya kuzaliwa, kasoro ya kimwili, ulemavu au upungufu?",
         "delete": "Futa",
+        "delivery_date": "Tarehe inayotarajiwa ya kujifungua",
         "dependents_details": "Maelezo ya Wategemezi",
         "dependent": "Wategemezi",
         "description": "Maelezo",
+        "diagnosed_dependents": "Je, wewe au wategemezi wako umewahi kuugua, unaumwa au kugunduliwa na mojawapo ya haya? Maswali ya Ndio/Hapana. Ikiwa Ndio, tafadhali toa tarehe, muda, maelezo na matibabu uliyopokea",
+        "diagnosis": "Utambuzi",
+        "diagnosis_date": "Tarehe ya utambuzi",
+        "disease": "Ugonjwa",
         "distribution_channel": "Njia ya Usambazaji",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Je, unataka kufaidika na chaguo la ongezeko?",
         "dob": "Tarehe ya Kuzaliwa",
@@ -1450,6 +1457,7 @@
         "gender": "Jinsia",
         "guardian_details": "Maelezo ya Mlezi",
         "height": "Urefu (cm)",
+        "hereditary_diseases": "Je, mtu yeyote wa familia yako (Wazazi, Ndugu, Watoto) anaugua, ameugua au amefariki kwa ugonjwa wa moyo, kisukari, saratani au ugonjwa mwingine wa kurithi kabla ya kufikisha miaka 55",
         "iban": "IBAN",
         "incorrect_id_no_format": "Muundo wa Nambari ya Kitambulisho sio sahihi",
         "insurance_company": "Kampuni ya Bima",
@@ -1461,10 +1469,13 @@
         "loading": "Inapakia",
         "male": "Mwanaume",
         "marital_status": "Hali ya Ndoa",
+        "medical_history": "Historia ya Matibabu",
+        "medication": "Je, kwa sasa unatumia dawa yoyote?",
         "mode_of_identity": "Aina ya Kitambulisho",
         "mode_of_identity_number": "Nambari ya Kitambulisho",
         "mode_of_identity_required": "Aina ya kitambulisho inahitajika",
         "mpay_no": "Nambari ya MPay",
+        "name": "Jina",
         "name_trustee": "Jina (Mdhamini)",
         "nationality": "Utaifa",
         "nationality_required": "Utaifa unahitajika",
@@ -1478,6 +1489,8 @@
         "option": "Chaguo",
         "other_name": "Jina Lingine",
         "percentage_benefit": "Asilimia ya Manufaa",
+        "person": "Mtu",
+        "personal_doctor": "Je, una daktari binafsi?",
         "period_consumed": "Kipindi cha Matumizi",
         "phone_number": "Nambari ya Simu",
         "physical_address": "Anuani ya Makazi",
@@ -1488,6 +1501,7 @@
         "policy_question": "Je, una sera yoyote ya bima ya maisha ambayo ni hai, iliyomalizika muda, iliyolipwa au iliyositishwa kutoka kwa kampuni yoyote ya bima ya maisha",
         "postal_address_details": "Maelezo ya Anuani ya Posta",
         "preferred_channel": "Njia Inayopendelewa",
+        "pregnancy_status": "Mjamzito? Tafadhali toa hali yako",
         "premium": "Malipo ya Bima",
         "premium_frequency": "Mzunguko wa Malipo ya Bima",
         "product": "Bidhaa",
