--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1388,6 +1388,7 @@
       "quotations": {
         "account_number": "Kontonummer",
         "add_coinsurance_option": "Mitversicherung hinzufügen",
+        "address": "Adresse",
         "agent": "Agent",
         "alcohol": "Alkohol",
         "annual_premium": "Jahresprämie",
@@ -1420,10 +1421,16 @@
         "cover_types": "Deckungsarten",
         "currency": "Währung",
         "date_of_birth_age": "Geburtsdatum (Alter)",
+        "defects": "Haben Sie angeborene Defekte, Anomalien, körperliche Deformitäten oder Behinderungen?",
         "delete": "Löschen",
+        "delivery_date": "Voraussichtliches Lieferdatum",
         "dependent": "Abhängige",
         "dependents_details": "Angaben zu den Abhängigen",
         "description": "Beschreibung",
+        "diagnosed_dependents": "Haben Sie oder einer Ihrer Angehörigen jemals an einer der folgenden Krankheiten gelitten, leiden Sie oder wurden diagnostiziert? Ja/Nein-Fragen. Wenn ja, geben Sie bitte Daten, Dauer, Beschreibung und Behandlung an",
+        "diagnosis": "Diagnose",
+        "diagnosis_date": "Diagnosedatum",
+        "disease": "Krankheit",
         "distribution_channel": "Vertriebskanal",
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Möchten Sie von der Eskalationsoption profitieren",
         "dob": "Geburtsdatum",
@@ -1446,6 +1453,7 @@
         "gender": "Geschlecht",
         "guardian_details": "Angaben zum Vormund",
         "height": "Größe (cm)",
+        "hereditary_diseases": "Leiden oder litten Familienmitglieder (Eltern, Geschwister, Kinder) an Herzkrankheiten, Diabetes, Krebs oder anderen Erbkrankheiten und starben daran vor dem 55. Lebensjahr",
         "iban": "IBAN",
         "incorrect_id_no_format": "Falsches Ausweisnummernformat",
         "insurance_company": "Versicherungsgesellschaft",
@@ -1457,10 +1465,13 @@
         "loading": "Wird geladen",
         "male": "Männlich",
         "marital_status": "Familienstand",
+        "medical_history": "Medizinische Vorgeschichte",
+        "medication": "Nehmen Sie derzeit Medikamente ein?",
         "mode_of_identity": "Identitätsnachweis",
         "mode_of_identity_number": "Identitätsnachweis-Nummer",
         "mode_of_identity_required": "Identitätsnachweis ist erforderlich",
         "mpay_no": "MPay-Nummer",
+        "name": "Name",
         "name_trustee": "Name (Treuhänder)",
         "nationality": "Nationalität",
         "nationality_required": "Nationalität ist erforderlich",
@@ -1475,6 +1486,8 @@
         "other_name": "Weiterer Name",
         "percentage_benefit": "Prozentualer Nutzen",
         "period_consumed": "Konsumdauer",
+        "person": "Person",
+        "personal_doctor": "Haben Sie einen persönlichen Arzt?",
         "phone_number": "Telefonnummer",
         "physical_address": "Physische Adresse",
         "pin_number": "PIN-Nummer",
@@ -1484,6 +1497,7 @@
         "policy_question": "Haben Sie eine aktive, abgelaufene, bezahlte oder gekündigte Lebensversicherungspolice von einer Lebensversicherungsgesellschaft",
         "postal_address_details": "Postanschrift Details",
         "preferred_channel": "Bevorzugter Kanal",
+        "pregnancy_status": "Schwanger? Bitte geben Sie Ihren Status an",
         "premium": "Prämie",
         "premium_frequency": "Prämienfrequenz",
         "product": "Produkt",
