--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -890,7 +890,10 @@
       "total_taxes": "Total des taxes",
       "excesses": "Franchises",
       "convert_quote": "Convertir le devis",
-      "confirm_conversion": "Confirmer la conversion"
+      "confirm_conversion": "Confirmer la conversion",
+      "conversion_message": "Vous êtes sur le point de convertir une cotation rapide en une cotation normale",
+      "convert_to_normal_quote": "Convertir en cotation normale",
+      "convert_to_policy": "Convertir en police"
 
     },
     "policy": {
