--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -867,7 +867,10 @@
       "total_taxes": "Jumla ya kodi",
       "excesses": "Ziada",
       "convert_quote": "Badilisha nukuu",
-      "confirm_conversion": "Thibitisha ubadilishaji"
+      "confirm_conversion": "Thibitisha ubadilishaji",
+      "conversion_message": "Unakaribia kubadilisha nukuu ya haraka kuwa nukuu ya kawaida",
+      "convert_to_normal_quote": "Badilisha kuwa nukuu ya kawaida",
+      "convert_to_policy": "Badilisha kuwa sera"
 
     },
     "policy": {
