VQ-737: Quotation Summary Screen - Multilingual

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1402,6 +1402,7 @@
         "bank_branch": "Bankfiliale",
         "banking_details": "Bankdaten",
         "basic_details": "Grundlegende Angaben",
+        "benef_deps_trust": "Begünstigte, Abhängige, Treuhänder",
         "beneficiaries": "Begünstigte",
         "beneficiary_details": "Begünstigtendetails",
         "benefit_proportion": "Vorteilsanteil",
@@ -1414,8 +1415,11 @@
         "citizenship": "Staatsangehörigkeit",
         "click_on_+_icon_to_add_record": "Klicken Sie auf das + Symbol, um einen Eintrag hinzuzufügen",
         "client": "Kunde",
+        "client_details": "Kundendetails",
+        "client_name": "Kundenname",
         "coinsurance": "Mitversicherung",
         "coinsurer_share": "Anteil des Mitversicherers",
+        "complete": "Abschließen",
         "completed": "Abgeschlossen",
         "consumption_question": "Konsumieren oder haben Sie eines der folgenden konsumiert",
         "contact": "Kontakt",
@@ -1440,6 +1444,7 @@
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Möchten Sie von der Eskalationsoption profitieren",
         "dob": "Geburtsdatum",
         "dob_required": "Geburtsdatum ist erforderlich",
+        "documents": "Dokumente",
         "documents_uploaded": "Dokumente hochgeladen",
         "documents_upload": "Dokumente hochladen",
         "economic_sector": "Wirtschaftssektor",
@@ -1484,11 +1489,14 @@
         "next": "Nächste",
         "no": "Nein",
         "no_cover_type_available": "Keine Deckungsart verfügbar",
+        "no_document_available": "Kein Dokument verfügbar",
         "no_file_upload_available": "Kein Datei-Upload verfügbar",
         "no_record_capture": "Kein Eintrag erfasst",
         "occupation": "Beruf",
         "option": "Option",
         "other_name": "Weiterer Name",
+        "overview_summary": "Übersichtszusammenfassung",
+        "payment_status": "Zahlungsstatus",
         "percentage_benefit": "Prozentualer Nutzen",
         "period_consumed": "Konsumdauer",
         "person": "Person",
@@ -1515,6 +1523,7 @@
         "quantity": "Menge",
         "relationship": "Beziehung",
         "relationship_trustee": "Beziehung (Treuhänder)",
+        "residence_country": "Wohnsitzland",
         "risky_occupation": "Ist Ihr Beruf mit einer spezifischen Gefahr verbunden oder nehmen Sie an Aktivitäten, Sportarten oder Hobbys teil, die gefährlich sein oder ein zusätzliches Risiko darstellen könnten",
         "save":"Speichern",
         "save_and_continue": "Speichern und fortfahren",
