--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1431,6 +1431,7 @@
         "bank_branch": "Agence bancaire",
         "banking_details": "Détails bancaires",
         "basic_details": "Détails de base",
+        "benef_deps_trust": "Bénéficiaires, Dépendants, Fiduciaires",
         "beneficiaries": "Bénéficiaires",
         "beneficiary_details": "Détails du bénéficiaire",
         "benefit_proportion": "Proportion des bénéfices",
@@ -1443,8 +1444,11 @@
         "citizenship": "Nationalité",
         "click_on_+_icon_to_add_record": "cliquez sur l'icône + pour ajouter un enregistrement",
         "client": "Client",
+        "client_details": "Détails du client",
+        "client_name": "Nom du client",
         "coinsurance": "Coassurance",
         "coinsurer_share": "Part du coassureur",
+        "complete": "Terminer",
         "completed": "Terminé",
         "consumption_question": "Consommez-vous ou avez-vous consommé l'un des éléments suivants",
         "contact": "Contact",
@@ -1469,6 +1473,7 @@
         "do_you_wish_to_have_the_benefit_of_escalation_option": "Souhaitez-vous bénéficier de l'option d'escalade",
         "dob": "Date de naissance",
         "dob_required": "La date de naissance est requise",
+        "documents": "Documents",
         "documents_uploaded": "Documents téléchargés",
         "documents_upload": "Téléchargement de documents",
         "economic_sector": "Secteur économique",
@@ -1513,11 +1518,14 @@
         "next": "Suivant",
         "no": "Non",
         "no_cover_type_available": "Aucun type de couverture disponible",
+        "no_document_available": "Aucun document disponible",
         "no_file_upload_available": "Aucun téléchargement de fichier disponible",
         "no_record_capture": "Aucun enregistrement capturé",
         "occupation": "Profession",
         "other_name": "Autre Nom",
         "option": "Option",
+        "overview_summary": "Résumé général",
+        "payment_status": "Statut de paiement",
         "percentage_benefit": "Pourcentage de bénéfice",
         "person": "Personne",
         "personal_doctor": "Avez-vous un médecin personnel?",
@@ -1544,6 +1552,7 @@
         "quantity": "Quantité",
         "relationship": "Relation",
         "relationship_trustee": "Relation (Fiduciaire)",
+        "residence_country": "Pays de résidence",
         "risky_occupation": "Votre profession est-elle associée à un danger spécifique ou participez-vous à une activité, un sport, un passe-temps qui pourrait être dangereux ou impliquer un risque supplémentaire",
         "save":"Enregistrer",
         "save_and_continue": "Enregistrer et continuer",
